--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -10,7 +10,7 @@
             <span class="l l4"></span>
             <span class="l l5"></span>
           </div>
-          Домашняя бухгалтерия
+          Home accounting
         </h1>
       </header>
       <div class="auth-content">
