--- a/src/app/system/records-page/records-page.component.html
+++ b/src/app/system/records-page/records-page.component.html
@@ -1,6 +1,6 @@
 <div class="title-block">
   <h3 class="title">
-    Страница записей <span class="sparkline bar"></span>
+    Records Page <span class="sparkline bar"></span>
   </h3>
 </div>
 <section class="section text-center" *ngIf="!isLoaded">
@@ -10,7 +10,7 @@
 <section class="section" *ngIf="isLoaded">
   <div class="row">
     <div class="col-md-6">
-      <lil-add-event></lil-add-event>
+      <lil-add-event [categories]="categories"></lil-add-event>
     </div>
     <div class="col-md-6">
       <lil-add-category (onCategoryAdd)="newCategoryAdded($event)"></lil-add-category>
