--- a/src/app/system/records-page/add-category/add-category.component.html
+++ b/src/app/system/records-page/add-category/add-category.component.html
@@ -1,7 +1,7 @@
 <div class="card">
   <div class="card-header bordered">
     <div class="header-block">
-      <h3 class="title">Добавить категорию</h3>
+      <h3 class="title">Add category</h3>
     </div>
   </div>
   <div class="card-block">
@@ -10,7 +10,7 @@
         class="form-group"
         [ngClass]="{'has-error': name.invalid && name.touched}"
       >
-        <label class="control-label" for="category-name">Введите название</label>
+        <label class="control-label" for="category-name">Enter the title</label>
         <input
           type="text"
           id="category-name"
@@ -31,7 +31,7 @@
         class="form-group"
         [ngClass]="{'has-error': capacity.invalid && capacity.touched}"
       >
-        <label class="control-label" for="category-value">Введите лимит</label>
+        <label class="control-label" for="category-value">Enter limit</label>
         <input
           type="number"
           id="category-value"
@@ -54,7 +54,7 @@
         class="btn btn-primary"
         [disabled]="f.invalid"
       >
-        Добавить
+        Add
       </button>
     </form>
   </div>
